force-app/main/default/objects/Account/fields/Average_Lead_Followup_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Lead_Followup_Days__c</fullName>
    <label>Average Lead Followup (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>