force-app/main/default/objects/Account/fields/Lead_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Rate__c</fullName>
    <label>Lead Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>