force-app/main/default/objects/Account/fields/Retail_Identity__c.field-meta.xml
<CustomField>
    <fullName>Retail_Identity__c</fullName>
    <label>Retail Identity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>