force-app/main/default/objects/Account/fields/Training_Completion__c.field-meta.xml
<CustomField>
    <fullName>Training_Completion__c</fullName>
    <label>Training Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>